# txn-classifier

./: .gitignore  README.md  environment.yml  main.py  pyproject.toml  requirements.txt  requirements_kaggle.txt
notebooks/: label_encoder.pkl  txn-bert.ipynb  txn_classifier.ipynb  txn_classifier_local.ipynb  txn_data_gen.ipynb
scripts/: get_txn.py  process_txn.py
